FIX: fixing gap articles

--- a/components/overlay/_overlay.scss
+++ b/components/overlay/_overlay.scss
@@ -38,5 +38,8 @@
         display: flex;
         flex-direction: row;
         justify-content: end;
+
+    max-width: 1400px;
+    margin: auto;
     }
 }
